--- a/week-1/date-night.html
+++ b/week-1/date-night.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<body>
 <style type="text/css">
     .highlight {color:green}
   
@@ -26,3 +29,5 @@ white out which i didn't know you could do, then i smoked a <span class="highlig
 Greened-out, then i turned into the sun. uh oh, looks like the meth is kicking in.</p>
 <h1>* STARTS CONVULSING *</h1>
 </center>
+</body>
+</html>
