--- a/week-1/date-night.html
+++ b/week-1/date-night.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+  <meta charset="UTF-8">
+  <title>Week 1 Date Night</title>
+</head>
 <body>
 <style type="text/css">
     .highlight {color:green}
