--- a/week-2/index.html
+++ b/week-2/index.html
@@ -1,1 +1,12 @@
-Week 2 babeeeeey
+<!DOCTYPE html>
+<html>
+    <Head>
+        <meta charset="UTF-8">
+        <title>WAWAWEEWAAA</title>
+    </Head>
+
+<body>
+
+</body>
+
+</html>
