--- a/week-2/index.html
+++ b/week-2/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <Head>
-        <meta charset="UTF-8">
-        <title>WAWAWEEWAAA</title>
-    </Head>
+<Head>
+    <meta charset="UTF-8">
+    <title>Jesus Fucking Christ</title>
+</Head>
 
 <body>
-
+    <!-- FUCK -->
+    <header>
+    <h1>Jesus Fucking Christ</h1>
+    <nav>NAV</nav>
+    </header>
+    <!-- Starting main -->
+    <main>
+        <article>
+            <h2>HOLY FUCK</h2>
+            <blockquote>
+                FUCK you <cite>-literally everyone</cite>    
+            </blockquote>
+            <!-- Main Text -->
+            <p>jesus <em>fucking</em> christ i cant believe you fucking idiots<br>
+            literally the stupidest people on this planet, and nothing can stop you from fucking up
+            </p>
+            <hr>
+            <section>
+                <h3>Your house</h3>
+                <p>so fucking ugly like <b>bruh</b></p>
+            </section>
+        </article>
+        <aside>
+            <h3>Buncha Bullshit</h3>
+            <p>T-shirts, AAAAAAAAAAA, eternal pain</p>
+        </aside>
+    </main>
+    <!-- website footer -->
+    <footer>  
+        yeah bitch Copyright deez nuts
+    </footer>
 </body>
 
 </html>
