--- a/week-2/index.html
+++ b/week-2/index.html
@@ -35,7 +35,7 @@
     </main>
     <!-- website footer -->
     <footer>  
-        yeah bitch Copyright deez nuts
+        yeah bitch &copy; deez nuts
     </footer>
 </body>
 
