added lists n stuff

--- a/week-3/index.html
+++ b/week-3/index.html
@@ -24,14 +24,46 @@
             </p>
             <hr>
             <section>
-                <h3>Your house</h3>
+                <h3>Worst restaurant</h3>
                 <p>so fucking ugly like <b>bruh</b></p>
             </section>
         </article>
+        <!-- buncha bullshit -->
         <aside>
             <h3>Buncha Bullshit</h3>
-            <p>T-shirts, AAAAAAAAAAA, eternal pain</p>
+            <ul>
+                <li>T-shirts    </li>
+                <li>AAAAAAAAAAA</li>
+                <li>eternal pain</li>
+            </ul>
         </aside>
+        <!-- events -->
+        <section>
+            <h3>events</h3>
+            <ol>
+                <li>Sep 23<sup>rd</sup>- fuckulon</li>
+                <li>oct 17<sup>th</sup>- shidid</li>
+            </ol>
+        </section>
+        <!-- adding section desc list -->
+        <section>
+            <h3>treat of da week</h3>
+            <dl>
+                <dt>Name</dt>
+                <dd>bucket of mayo</dd>
+                <dt>Calories</dt>
+                <dd>160,000</dd>
+                <dt>Ingredients</dt>
+                <dd>
+                    <ul>
+                        <li>mayo</li>
+                        <li>Hate</li>
+                        <li>sin</li>
+                        <li>pain</li>
+                    </ul>
+                </dd>
+            </dl>
+        </section>
     </main>
     <!-- website footer -->
     <footer>  
