Added a bunch of stuff

--- a/week-3/index.html
+++ b/week-3/index.html
@@ -9,12 +9,19 @@
     <!-- FUCK -->
     <header>
     <h1>Jesus Fucking Christ</h1>
-    <nav>NAV</nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Main page swag</a> </li>
+            <li><a href="contact.html">Contact swag</a> </li>
+        </ul>
+    </nav>
     </header>
     <!-- Starting main -->
     <main>
         <article>
             <h2>HOLY FUCK</h2>
+            <!-- adding image -->
+            <img title="yachte" src="images/magik.png" width="1000" height="200" alt="yachte"/>
             <blockquote>
                 FUCK you <cite>-literally everyone</cite>    
             </blockquote>
@@ -24,9 +31,11 @@
             </p>
             <hr>
             <section>
-                <h3>Worst restaurant</h3>
+                <h3>This dood</h3>
                 <p>so fucking ugly like <b>bruh</b></p>
+                <img title="ugly freak" src="images/fuck.png" alt="ugly dood"/>
             </section>
+            
         </article>
         <!-- buncha bullshit -->
         <aside>
@@ -63,6 +72,9 @@
                     </ul>
                 </dd>
             </dl>
+        </section>
+        <section>
+            <a href="../week-1/date-night.html">CLICK ME BRO</a>
         </section>
     </main>
     <!-- website footer -->
