added run ya numba shortie

--- a/week-3/contact.html
+++ b/week-3/contact.html
@@ -18,7 +18,7 @@
     </header>
     <!-- Starting main -->
     <main>
-        
+        <h2>Run ya numba shortie</h2>
     </main>
     <!-- website footer -->
     <footer>  
