--- a/week-3/index.html
+++ b/week-3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
 <Head>
     <meta charset="UTF-8">
     <title>Jesus Fucking Christ</title>
@@ -73,9 +73,9 @@
                 </dd>
             </dl>
         </section>
-        <section>
+
             <a href="../week-1/date-night.html">CLICK ME BRO</a>
-        </section>
+
     </main>
     <!-- website footer -->
     <footer>  
