--- a/week-3/contact.html
+++ b/week-3/contact.html
@@ -9,6 +9,29 @@
     <!-- FUCK -->
     <header>
     <h1>Jesus Fucking Christ</h1>
+    <table>
+        <caption>Hours of Operation</caption>
+        <thead>
+            <tr>
+                <th>Days</th>
+                <th>Hours</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Mon - Fri</td>
+                <td>6 AM - 9 PM</td>
+            </tr>
+            <tr>
+                <td>Sat</td>
+                <td>9 AM - 11 PM</td>
+            </tr>
+            <tr>
+                <td>Sun</td>
+                <td>CLOSED</td>
+            </tr>
+        </tbody>
+    </table>
     <nav>
         <ul>
             <li><a href="index.html">Main page swag</a> </li>
