--- a/week-3/index.html
+++ b/week-3/index.html
@@ -73,9 +73,41 @@
                 </dd>
             </dl>
         </section>
+        <!-- Adding Menu Section -->
+        <section>
+            <h3>Menu Specials</h3>
+            <table border>
+                <thead>
+                    <tr> 
+                        <th colspan="2">Items</th>
+                        <th rowspan="2">Price</th>
+                    </tr>
+                    <tr>
+                        <th>Name</th>
+                        <th>Calories</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td> Banana Bread</td>
+                        <td> 250</td>
+                        <td>&dollar; 600</td>
+                    </tr>
+                    <tr>
+                        <td>Oil</td>
+                        <td>500000</td>
+                        <td>&dollar; 50</td>
+                    </tr>
+                    <tr>
+                        <td>Soylent</td>
+                        <td>everything you need</td>
+                        <td>&dollar; .005</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
 
             <a href="../week-1/date-night.html">CLICK ME BRO</a>
-
     </main>
     <!-- website footer -->
     <footer>  
