--- a/week-4/index.html
+++ b/week-4/index.html
@@ -101,7 +101,7 @@
                     <tr>
                         <td>Soylent</td>
                         <td>everything you need</td>
-                        <td>&dollar;</td>
+                        <td>&dollar; .005</td>
                     </tr>
                 </tbody>
             </table>
