--- a/midterm/index.html
+++ b/midterm/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-
+    <div class="container">
     <!-- Header -->
-    <header>
-        <h1>Lone Starfish</h1>
+    <header class="header">
+        <h1 class="centered">Lone Starfish</h1>
         <img title="starfish" src="images/lone-starfish-wide.jpg">
     </header>
 
@@ -27,14 +27,14 @@
     <!--Main Article -->
     <article id="story">
         <h2>Life of a Starfish</h2>
-        <img title="starfish" src="images/lone-starfish.jpg" alt="lone starfish">
+        <img class="starfish" title="starfish" src="images/lone-starfish.jpg" alt="lone starfish">
         <P>
             Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.
         </P>
     </article>
     
     <!-- Facts -->
-    <article>
+    <article id="facts">
         <h2>Facts About Starfish</h2>
         <ul>
             <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
@@ -73,7 +73,7 @@
             </form>
         </div>
     </section>
-
+ </div>
 </body>
 
 </html>
