working on midterm

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -35,7 +35,7 @@
     
     <!-- Facts -->
     <article id="facts">
-        <h2>Facts About Starfish</h2>
+        <h3>Facts About Starfish</h3>
         <ul>
             <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
             <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
@@ -44,8 +44,8 @@
         </ul>
     </article>
 
-    <section>
-        <h2>Contact to learn more</h2>
+    <section id="contact">
+        <h3>Contact to learn more</h3>
         <div>
             <form action="thanks.html" method="post">
                 <fieldset>
@@ -60,7 +60,7 @@
                     <label for="message">Your Message</label>
                     <input id="message" name="message" type="text" required>
                 </fieldset>
-                <h3>Would you like to vist the starfish?</h3>
+                <h4>Would you like to vist the starfish?</h4>
                 <fieldset>
                     <label for="yes">Yes</label>
                     <input type="radio" id="yes" name="visit" checked>
