--- a/midterm/index.html
+++ b/midterm/index.html
@@ -18,9 +18,9 @@
     <!-- nav -->
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#story">Story</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="#story">STORY</a></li>
+            <li><a href="#contact">CONTACT</a></li>
         </ul>
     </nav>
 
@@ -43,36 +43,42 @@
             <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
         </ul>
     </article>
-
+    <!-- Contact Section -->
     <section id="contact">
         <h3>Contact to learn more</h3>
         <div>
             <form action="thanks.html" method="post">
                 <fieldset>
-                    <label for="fullname">Name</label>
+                    <label for="fullname">Your Name</label>
                     <input id="fullname" name="fullname" type="text" required>
                 </fieldset>
                 <fieldset>
-                    <label for="email">Email</label>
+                    <label for="email">Your Email</label>
                     <input id="email" name="email" type="email" required>
                 </fieldset>
                 <fieldset>
                     <label for="message">Your Message</label>
-                    <input id="message" name="message" type="text" required>
+                    <textarea id="message" name="message" required></textarea>
                 </fieldset>
                 <h4>Would you like to vist the starfish?</h4>
                 <fieldset>
                     <label for="yes">Yes</label>
-                    <input type="radio" id="yes" name="visit" checked>
+                    <input type="radio" id="yes" name="visit">
                     <label for="no">No</label>
                     <input type="radio" id="no" name="visit">
                     <label for="maybe">maybe</label>
                     <input type="radio" id="maybe" name="visit">
                 </fieldset>
-                <input type="submit" value="Submit">
+                <input class="send" type="submit" value="SEND">
             </form>
         </div>
     </section>
+    <!-- Footer -->
+    <footer>
+        <aside>
+            &#169; Lone Starfish.
+        </aside>
+    </footer>
  </div>
 </body>
 
