--- a/week-9/index.html
+++ b/week-9/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>Act Now | United Nations</title>
 </head>
 
@@ -31,7 +32,7 @@
             COVID-19 is a wake-up call from nature. Our lives depend on a healthy planet. Let’s seize the moment and change course – toward more sustainable lifestyles.
             </p>
         </section>
-        <section class="app">
+        <section class="app clearfix">
             <h2>Mobile App</h2>
             <img src="images/actnowapp.jpg" alt="act now app screens">
             <p>
@@ -50,7 +51,7 @@
             </li>
         </ul>
         <p class="copt">
-            &copy; All the information is taken from the<a href="https://www.un.org/en/actnow"> UN Act Now Website. </a>
+            &copy; All the information is taken from the <a href="https://www.un.org/en/actnow">UN Act Now Website. </a>
         </p>
     </footer>
  </div>
