--- a/week-9/index.html
+++ b/week-9/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <title>Act Now | United Nations</title>
-</head>
+</head
 
 <body>
  <div class="container">
