--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,7 +35,7 @@
         <main class="content">
             <section id="about-me" class="about-me">
                 <h2>Hi there</h2>
-                <p>My name's Adison Rossiter and I'm a full time student at algonquin college currently enrolled in the Interactive Media Design program, looking to get into more of the graphic design aspects of media.</p>
+                <p>My name's Adison Rossiter and I'm a full time student at algonquin college currently enrolled in the Interactive Media Design program, looking to get into more of the graphic design aspects of media.AAAAAAAAAAAAAAAAAAAA</p>
             </section>
 
             <section id="art" class="art">
