working on portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div class="side-nav">
+    <div class="side-nav" class="nav">
         <nav>
             <ul>
                 <img src="images/adiross-logo.png" alt="Adiross logo" class="logo">
@@ -38,19 +38,20 @@
                 <p>My name's Adison Rossiter and I'm a full time student at algonquin college currently enrolled in the Interactive Media Design program, looking to get into more of the graphic design aspects of media.</p>
             </section>
 
-            <section id="art" class="art">
+            <section id="art" class="artzone">
                 <h2>art</h2>
-                <img src="images/shroom-men.png" alt="mushroom men dancing around the world">
-                <img src="images/acid-sludge.png" alt="Acid Sludge">
-                <img src="images/2can.png" alt="Toucan">
-                <img src="images/gars.png" alt="Shapes Walkin, the boys">
-                <img src="images/Interesting.png" alt="abstract colours">
-                <img src="images/man-of-few-words.png" alt="man of few words">
-                <img src="images/mild-days.png" alt="mild days">
-                <img src="images/sadsadsad.png" alt="easter island heads dancing">
-                <img src="images/skycircow.png" alt="abstract circle in sky">
-                <img src="images/the-boys.png" alt="tribal looking art">
-                <img src="images/tree.png" alt="abstract tree">
+                <img src="images/shroom-men.png" alt="mushroom men dancing around the world" class="artbig">
+                <img src="images/acid-sludge.png" alt="Acid Sludge" class="art">
+                <img src="images/2can.png" alt="Toucan" class="art">
+                <img src="images/gars.png" alt="Shapes Walkin, the boys" class="art">
+                <img src="images/Interesting.png" alt="abstract colours" class="art">
+                <img src="images/man-of-few-words.png" alt="man of few words" class="art">
+                <img src="images/mild-days.png" alt="mild days" class="artbig">
+                <img src="images/sadsadsad.png" alt="easter island heads dancing" class="art">
+                <img src="images/skycircow.png" alt="abstract circle in sky" class="art">
+                <img src="images/the-boys.png" alt="tribal looking art" class="art">
+                <img src="images/tree.png" alt="abstract tree" class="art">
+                <img src="images/maybe.png" alt="textured square" class="art">
             </section>
 
         </main>
