--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,8 +9,13 @@
 
 
 <body>
+    
+    
+    <header class="head">
+        <img src="images/adiross-logo.png" alt="Adiross logo" class="logo">
+    </header>
 
-    <div class="side-nav" class="nav">
+    <div class="side-nav">
         <nav>
             <ul>
                 <img src="images/adiross-logo.png" alt="Adiross logo" class="logo">
@@ -21,18 +26,21 @@
         </nav>
     </div>
 
+    <div class="mobile-nav">
+        <nav>
+            <ul>
+                <li><a href="#about-me">about me</a></li>
+                <li><a href="#art">art</a></li>
+                <li><a href="#contact">contact</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <div class="container">
-
-        <!-- Header -->
-
-        <header class="head">
+        <main class="content">
             <div class="banner">
                 <h1>Adi Ross</h1>
             </div>
-        </header>
-
-
-        <main class="content">
             <section id="about-me" class="about-me">
                 <h2>Hi there</h2>
                 <p>My name's Adison Rossiter and I'm a full time student at algonquin college currently enrolled in the Interactive Media Design program, looking to get into more of the graphic design aspects of media.</p>
