--- a/Final/index.html
+++ b/Final/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <div class="wrapper">
-        <!-- Header -->
+        <!---------------------------------------------------------------------------------------------------- Header------------------------------ -->
         <header class="site-header">
                 <img src="images/logo.png">
             <div class="top-nav, container">
-                <!-- NAV -->
+                <!-------------------------------- NAV ------------------------------>
                 <nav class="main-nav">
                     <ul class="nav-list">
                         <li><a href="#" class="current">Home</a></li>
@@ -24,22 +24,22 @@
                 </nav>
             </div>
         </header>
-        <!-- Main Content -->
+        <!----------------------------------------------------------------------- Main Content --------------------------------------------------------->
         <main class="content">
-            <!-- Welcome Section -->
+            <!------------------------- Welcome Section ------------------------>
             <section class="welcome container">
                 <h1>Welcom to Three Star Media</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora in aliquid commodi quas, mollitia quidem eligendi! Aspernatur impedit, illum repudiandae inventore error exercitationem pariatur ipsa et neque similique molestiae. Aliquam!</p>
                 <a class="Button-1" href="#">Connect with us</a>
             </section>
-            <!-- About Us -->
+            <!-------------------- About Us -------------------------->
             <section class="about-us container">
                 <h2>About Us</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto expedita aliquam quo sint maxime repudiandae aut, soluta dolores, porro iure qui amet! Labore fugit voluptatem assumenda fuga. Quas, mollitia placeat!
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita, culpa molestias aperiam iure maiores quos ratione quod adipisci molestiae quisquam illum distinctio, odio eligendi provident. Animi delectus amet facere autem.
                 </p>
             </section>
-            <!-- Our Services -->
+            <!-------------------- Our Services ------------------------>
             <section class="our-services container">
                 <h2>Our Services</h2>
                 <div class="digital-transformation">
@@ -73,6 +73,7 @@
                     <a class="Button-2" href="#">Print Plans</a>
                 </div>
             </section>
+            <!----------------------------------------- Our Vision ------------------------------------------------>
             <section class="our-vision container">
                 <h4>Our Vision</h4>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia illum vitae neque unde deserunt molestias laboriosam sapiente tempore. Debitis amet illo autem recusandae voluptas omnis voluptate laborum asperiores repudiandae consequatur!</p>
