--- a/Final/index.html
+++ b/Final/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Icon Font -->
+    <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css">
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="css/main.css">
     <title>Three Star Media</title>
 </head>
 <body>
     <div class="wrapper">
         <!---------------------------------------------------------------------------------------------------- Header------------------------------ -->
         <header class="site-header">
-                <img src="images/logo.png">
+                <img src="images/logo.png" alt="Three Star Media Logo">
             <div class="top-nav, container">
                 <!-------------------------------- NAV ------------------------------>
                 <nav class="main-nav">
@@ -19,7 +23,7 @@
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Team</a></li>
                         <li><a href="#">Contact</a></li>
-                        <li><input type="text" placeholder="Search"> <input class="search-buttone" type="button"></li>
+                        <li><input type="text" placeholder="Search"> <button><i class="im im-magnifier"></i></button></li>
                     </ul>
                 </nav>
             </div>
@@ -79,7 +83,71 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia illum vitae neque unde deserunt molestias laboriosam sapiente tempore. Debitis amet illo autem recusandae voluptas omnis voluptate laborum asperiores repudiandae consequatur!</p>
                 <a class="Button-3" href="#">Learn More</a>
             </section>
+            <!----------------------------------------- Our Team ----------------------------------------------------->
+            <section class="our-team container">
+                <h2>Our Team</h2>
+                <div class="john-doe">
+                    <img src="images/john.jpg" alt="John Doe Ceo">
+                    <h3>John Doe</h3>
+                    <h5>CEO and Co-owner</h5>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem adipisci quisquam soluta quas sequi enim eius rem ea quod libero blanditiis, mollitia pariatur necessitatibus dolor nostrum iusto, facere omnis ex.</p>
+                </div>
+                <div class="bob-rite">
+                    <img src="images/bob.jpg" alt="Bob Rite Cfo">
+                    <h3>Bob Rite</h3>
+                    <h5>CFO and Co-owner</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet consequatur dignissimos reprehenderit repellat! Neque odit provident ab nihil suscipit delectus exercitationem deleniti tempora, accusantium dicta. Error temporibus minus iste?</p>
+                </div>
+            </section>
+            <!--------------------------------------------- Contact Us -------------------------------------------------------------------------->
+            <section class="contact-us container">
+                <h2>Contact Us</h2>
+                <h3>Send us a message</h3>
+                <form action="#" method="post">
+                    <fieldset>
+                        <label for="fullname">Full Name</label>
+                        <input id="fullname" name="fullname" type="text" required>
+                    </fieldset>
+                    <fieldset>
+                        <label for="email">Email</label>
+                        <input id="email" name="email" type="email" required>
+                    </fieldset>
+                    <fieldset>
+                        <label for="message">Your Message</label>
+                        <textarea id="message" name="message" required></textarea>
+                    </fieldset>
+                    <input class="send" type="submit" value="Send">
+                </form>
+            </section>
+            <!----------------------------------------- Hours of Operation ------------------------------------------------->
+            <section class="hours-of-operation container">
+                <h3>Hours of Operation</h3>
+                <table>
+                    <tr>
+                        <th>Days</th>
+                        <th>Hours</th>
+                    </tr>
+                    <tr>
+                        <td>Monday-Friday</td>
+                        <td>9 AM-6 PM</td>
+                    </tr>
+                    <tr>
+                       <td>Saturday-Sunday </td>
+                       <td>Closed</td>
+                    </tr>
+                </table>
+            </section>
+            <!-------------------------------------------- Location ---------------------------------------------------------->
+            <section class="location container">
+                <h3>Location</h3>
+                <!-- google maps embeded -->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11216.156593565902!2d-75.7569228!3d45.348022!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc6cc467725843e2b!2sAlgonquin%20College%20%E2%80%93%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1607029991130!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </section>
         </main>
+        <footer class="container">
+            <p>&copy; Copyright Three Star Media, 2020</p>
+            <p>All images are taken from <a href="https://unsplash.com/">Unsplash</a></p>
+        </footer>
     </div>
     
 </body>
