--- a/Final/index.html
+++ b/Final/index.html
@@ -31,51 +31,60 @@
         <!----------------------------------------------------------------------- Main Content -------------------------------------------------------->
         <main class="content">
             <!------------------------- Welcome Section ------------------------>
-            <section class="welcome container">
-                <h1>Welcom to Three Star Media</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora in aliquid commodi quas, mollitia quidem eligendi! Aspernatur impedit, illum repudiandae inventore error exercitationem pariatur ipsa et neque similique molestiae. Aliquam!</p>
-                <a class="Button-1" href="#">Connect with us</a>
+            <section class="welcome">
+                <div class="background">
+                    <div class="container">
+                        <h1>Welcome to Three Star Media</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora in aliquid commodi quas, mollitia quidem eligendi! Aspernatur impedit, illum repudiandae       inventore error exercitationem pariatur ipsa et neque similique molestiae. Aliquam!</p>
+                        <a class="Button-1" href="#">Connect with us  <i class="im im-care-right"></i></a>
+                    </div>
+                </div>
             </section>
             <!-------------------- About Us -------------------------->
-            <section class="about-us container">
-                <h2>About Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto expedita aliquam quo sint maxime repudiandae aut, soluta dolores, porro iure qui amet! Labore fugit voluptatem assumenda fuga. Quas, mollitia placeat!
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita, culpa molestias aperiam iure maiores quos ratione quod adipisci molestiae quisquam illum distinctio, odio eligendi provident. Animi delectus amet facere autem.
-                </p>
+            <section class="about-us"> 
+                <div class="container">
+                    <img src="images/about-us.jpg" alt="About us background">
+                    <h2>About Us</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto expedita aliquam quo sint maxime repudiandae aut, soluta dolores, porro iure qui amet! Labore fugit voluptatem assumenda fuga. Quas, mollitia placeat!
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita, culpa molestias aperiam iure maiores quos ratione quod adipisci molestiae quisquam illum distinctio, odio eligendi provident. Animi delectus amet facere autem.
+                    </p>
+                </div>
             </section>
             <!-------------------- Our Services ------------------------>
-            <section class="our-services container">
+            <section class="container">
                 <h2>Our Services</h2>
-                <div class="digital-transformation">
-                    <img src="images/digital.jpg" alt="Looking at phone and computer">
-                    <h3>Digital Transformation</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic odit doloremque ab quia, et possimus quisquam deserunt quidem! Eveniet saepe harum animi dolor iure et laudantium modi facilis esse optio.</p>
-                    <a class="Button-2" href="#">Digital Plans</a>
-                </div>
-                <div class="marketing">
-                    <img src="images/marketing.jpg" alt="Graphs on computer screen">
-                    <h3>Marketing</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A tempore dolore reiciendis? At quia ipsum provident minus, mollitia iste tempore aliquid placeat ut eos a odit, quam, error accusamus? Incidunt.</p>
-                    <a class="Button-2" href="#">Marketing Plans</a>
-                </div>
-                <div class="video-production">
-                    <img src="images/video.jpg" alt="Looking at youtube on a phone">
-                    <h3>Video Production</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et mollitia minima eaque suscipit molestias nemo sit autem quisquam accusamus, alias, voluptates ratione! Optio cupiditate maiores, voluptates quae iste laboriosam sequi!</p>
-                    <a class="Button-2" href="#">Video Plans</a>
-                </div>
-                <div class="web-development">
-                    <img src="images/web.jpg" alt="Phone on table with instagram open">
-                    <h3>Web Development</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ab, unde quam vel dolorem illo voluptatibus quos accusamus eos tempore iusto, adipisci sequi consequuntur quaerat omnis, minus quo asperiores? Laudantium?</p>
-                    <a class="Button-2" href="#">Web Plans</a>
-                </div>
-                <div class="print">
-                    <img src="images/print.jpg" alt="Newspaper boxes on a street">
-                    <h3>Print</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis illum porro esse sint laboriosam molestiae architecto vitae explicabo, ipsa, consectetur quisquam nostrum accusamus consequuntur provident tenetur expedita? Sit, velit optio.</p>
-                    <a class="Button-2" href="#">Print Plans</a>
-                </div>
+                    <div class="our-services">
+                        <div class="digital-transformation">
+                            <img src="images/digital.jpg" alt="Looking at phone and computer">
+                            <h3>Digital Transformation</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic odit doloremque ab quia, et possimus quisquam deserunt quidem! Eveniet saepe harum animi dolor iure et laudantium modi facilis esse optio.</p>
+                            <a class="button-2" href="#">Digital Plans  <i class="im im-care-right"></i></a>
+                        </div>
+                        <div class="marketing">
+                            <img src="images/marketing.jpg" alt="Graphs on computer screen">
+                            <h3>Marketing</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A tempore dolore reiciendis? At quia ipsum provident minus, mollitia iste tempore aliquid placeat ut eos a odit, quam, error accusamus? Incidunt.</p>
+                            <a class="button-2" href="#">Marketing Plans  <i class="im im-care-right"></i></a>
+                        </div>
+                        <div class="video-production">
+                            <img src="images/video.jpg" alt="Looking at youtube on a phone">
+                            <h3>Video Production</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et mollitia minima eaque suscipit molestias nemo sit autem quisquam accusamus, alias, voluptates ratione! Optio cupiditate maiores, voluptates quae iste laboriosam sequi!</p>
+                            <a class="button-2" href="#">Video Plans  <i class="im im-care-right"></i></a>
+                        </div>
+                        <div class="web-development">
+                            <img src="images/web.jpg" alt="Phone on table with instagram open">
+                            <h3>Web Development</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ab, unde quam vel dolorem illo voluptatibus quos accusamus eos tempore iusto, adipisci sequi consequuntur quaerat omnis, minus quo asperiores? Laudantium?</p>
+                            <a class="button-2" href="#">Web Plans  <i class="im im-care-right"></i></a>
+                        </div>
+                        <div class="print">
+                            <img src="images/print.jpg" alt="Newspaper boxes on a street">
+                            <h3>Print</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis illum porro esse sint laboriosam molestiae architecto vitae explicabo, ipsa, consectetur quisquam nostrum accusamus consequuntur provident tenetur expedita? Sit, velit optio.</p>
+                            <a class="button-2" href="#">Print Plans  <i class="im im-care-right"></i></a>
+                        </div>
+                    </div>
             </section>
             <!----------------------------------------- Our Vision ------------------------------------------------>
             <section class="our-vision container">
