--- a/Final/index.html
+++ b/Final/index.html
@@ -36,7 +36,7 @@
                     <div class="container">
                         <h1>Welcome to Three Star Media</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora in aliquid commodi quas, mollitia quidem eligendi! Aspernatur impedit, illum repudiandae       inventore error exercitationem pariatur ipsa et neque similique molestiae. Aliquam!</p>
-                        <a class="Button-1" href="#">Connect with us  <i class="im im-care-right"></i></a>
+                        <a class="button-1" href="#">Connect with us  <i class="im im-care-right"></i></a>
                     </div>
                 </div>
             </section>
@@ -90,22 +90,28 @@
             <section class="our-vision container">
                 <h4>Our Vision</h4>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia illum vitae neque unde deserunt molestias laboriosam sapiente tempore. Debitis amet illo autem recusandae voluptas omnis voluptate laborum asperiores repudiandae consequatur!</p>
-                <a class="Button-3" href="#">Learn More</a>
+                <a class="button-3" href="#">Learn More <i class="im im-care-right"></i></a>
             </section>
             <!----------------------------------------- Our Team ----------------------------------------------------->
-            <section class="our-team container">
+            <section class="container">
                 <h2>Our Team</h2>
-                <div class="john-doe">
-                    <img src="images/john.jpg" alt="John Doe Ceo">
-                    <h3>John Doe</h3>
-                    <h5>CEO and Co-owner</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem adipisci quisquam soluta quas sequi enim eius rem ea quod libero blanditiis, mollitia pariatur necessitatibus dolor nostrum iusto, facere omnis ex.</p>
-                </div>
-                <div class="bob-rite">
-                    <img src="images/bob.jpg" alt="Bob Rite Cfo">
-                    <h3>Bob Rite</h3>
-                    <h5>CFO and Co-owner</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet consequatur dignissimos reprehenderit repellat! Neque odit provident ab nihil suscipit delectus exercitationem deleniti tempora, accusantium dicta. Error temporibus minus iste?</p>
+                <div class="our-team">
+                    <div class="john-doe-img">
+                        <img src="images/john.jpg" alt="John Doe Ceo">
+                    </div>
+                    <div class="john-doe">
+                        <h3>John Doe</h3>
+                        <h5>CEO and Co-owner</h5>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem adipisci quisquam soluta quas sequi enim eius rem ea quod libero blanditiis, mollitia pariatur necessitatibus dolor nostrum iusto, facere omnis ex.</p>
+                    </div>
+                    <div class="bob-rite-img">
+                        <img src="images/bob.jpg" alt="Bob Rite Cfo">
+                    </div>
+                    <div class="bob-rite">
+                        <h3>Bob Rite</h3>
+                        <h5>CFO and Co-owner</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eveniet consequatur dignissimos reprehenderit repellat! Neque odit provident ab nihil suscipit delectus exercitationem deleniti tempora, accusantium dicta. Error temporibus minus iste?</p>
+                    </div>
                 </div>
             </section>
             <!--------------------------------------------- Contact Us -------------------------------------------------------------------------->
