--- a/MTM6201/Week-1/index.html
+++ b/MTM6201/Week-1/index.html
@@ -14,7 +14,7 @@
         <h2>Responsive Web Design 2 MTM6201</h2>
         <h3>Ross0375 on Github</h3>
         <p>One thing I did over the break was start selling stickers of my art online! Printed locally and packaged by hand, and thankfully I've made my money back already! My next step is to take the money earned and spend it on screen printing supplies.</p>
-        <img src="images/1_ROSSITER_A.jpg" alt="Sticker packs">
+        <img src="images/1_ROSSITER_A.jpg" alt="Sticker packs" width="400" height="300">
     </main>
 </body>
 
