--- a/MTM6201/Week-5/Landing-Page/index.html
+++ b/MTM6201/Week-5/Landing-Page/index.html
@@ -22,12 +22,17 @@
     <main class="container">
         <section id="landing-text">
             <h1>Want to be your own boss?</h1>
-            <p>Start today and make up to 30$/hr driving your own vehicle with Dash!</p>
+            <h3>Start today and make up to 30$/hr driving your own vehicle with Dash!</h3>
+        </section>
+
+        <section id="bike">
+            <img src="images/bg-image/scooter.svg" alt="scooter illustration">
         </section>
 
         <section id="call-to-action">
             <h2>Apply Now</h2>
-            <h3>Enter your info below to get started</h3>
+            <h4 id="mobile">Enter your info below.</h4>
+            <h4 id="desktop">Enter your info below to get started</h4>
             <form action="#" method="post">
                 <fieldset>
 
@@ -44,7 +49,7 @@
                         <label for="agree" class="agree"> I agree to dash terms</label>
                     </div>
 
-                    <input id="submit" type="submit" value="DRIVE WITH US">
+                    <input id="send" type="submit" value="DRIVE WITH US">
                 </fieldset>
             </form>
             <p id="already-applied">Already applied? <a href="#">Check your application status here</a></p>
@@ -54,11 +59,11 @@
     <footer>
         <div class="container">
             <div id="estimate">
-                <h4>See how much you can earn with Dash.</h4>
+                <h5>See how much you can earn with Dash.</h5>
                 <p>how many hours do you want to drive with us this week?</p>
 
                 <form action="#" method="post">
-                    <fieldset>
+                    <fieldset id="estimate-placement">
                         <input type="number" id="hours" placeholder="hours">
                         <input type="text" placeholder="city" id="city">
                         <input id="calculate" type="submit" value="CALCULATE">
