--- a/MTM6201/Week-5/Landing-Page/index.html
+++ b/MTM6201/Week-5/Landing-Page/index.html
@@ -32,7 +32,7 @@
         <section id="call-to-action">
             <h2>Apply Now</h2>
             <h4 id="mobile">Enter your info below.</h4>
-            <h4 id="desktop">Enter your info below to get started</h4>
+            <h4 id="desktop">Enter your info below to get started.</h4>
             <form action="#" method="post">
                 <fieldset>
 
@@ -57,7 +57,7 @@
     </main>
     <!-- -------------------------------FOOTER----------------------------------------- -->
     <footer>
-        <div class="container site-footer">
+        <div class="container" id="site-footer">
             <div id="estimate">
                 <h5>See how much you can earn with Dash.</h5>
                 <p>how many hours do you want to drive with us this week?</p>
@@ -70,11 +70,13 @@
                     </fieldset>
                 </form>
             </div>
-            <div id="social-media">
-                <img src="images/icons/instagram.svg" alt="instagram" class="icon">
-                <img src="images/icons/twitter.svg" alt="twitter" class="icon">
-                <img src="images/icons/facebook.svg" alt="facebook" class="icon">
-                <img src="images/icons/linkedin.svg" alt="linkedin" class="icon">
+            <div id="social-media-flex">
+                <div id="social-media">
+                    <img src="images/icons/instagram.svg" alt="instagram" class="icon">
+                    <img src="images/icons/twitter.svg" alt="twitter" class="icon">
+                    <img src="images/icons/facebook.svg" alt="facebook" class="icon">
+                    <img src="images/icons/linkedin.svg" alt="linkedin" class="icon">
+                </div>
             </div>
         </div>
     </footer>
