--- a/MTM6201/Week-5/Landing-Page/index.html
+++ b/MTM6201/Week-5/Landing-Page/index.html
@@ -15,7 +15,7 @@
     <header class="header container" id="header">
         <div class="logo">
             <img src="images/logo/logo.png" alt="Dash Logo">
-        <div>
+        </div>
     </header>
 
     <!-- ------------------------------------MAIN------------------------------------------------- -->
